--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,33 @@
-# Node modules (dependencies)
+# Dependencies
 node_modules/
 
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Mac files
+.DS_Store
+
+# VS Code files
+.vscode/
 
 # Build files
 dist/
@@ -17,10 +35,8 @@ build/
 
 # Cache and OS files
 .cache/
-.DS_Store
 Thumbs.db
 
 # IDE/Editor files
-.vscode/
 .idea/
 *.swp
