--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "backend",
+  "name": "swapnapurti-camping-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend for Swapnapurti Camping Project",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +16,17 @@
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0",
+    "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
