--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Backend for Swapnapurti Camping Project",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@types/express": "^5.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
@@ -27,6 +29,11 @@
     "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.5",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
