--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for Swapnapurti Camping Project",
   "main": "server.js",
   "scripts": {
-    "start": "node dist/src/app.js",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc"
   },
